If URL input is not a URL, try it as a file URL.